--- a/static/slides/03-inference-review.Rmd
+++ b/static/slides/03-inference-review.Rmd
@@ -63,6 +63,16 @@ class: middle center
 
 ---
 
+## Topics
+
+
+- Sampling distributions and the Central Limit Theorem 
+
+- Hypothesis test to test a claim about a population parameter
+
+- Confidence interval to estimate a population parameter
+
+---
 
 class: center, middle
 
@@ -70,14 +80,11 @@ class: center, middle
 
 ---
 
----
-
 ## Terminology
 
 .vocab[Population]: a group of individuals or objects we are interested in studying
 
-.vocab[Parameter]: a numerical quantity derived from the population
-(almost always unknown)
+.vocab[Parameter]: a numerical quantity derived from the population (almost always unknown)
 
 If we had data from every unit in the population, we could just calculate 
 population parameters and be done!
@@ -107,31 +114,89 @@ Similar to tasting a spoonful of soup while cooking to make an inference about t
 
 ## Statistical inference
 
-.vocab[Statistical inference] is the process of using sample data to make 
-  conclusions about the underlying population the sample came from.
+.vocab[Statistical inference] is the process of using sample data to make conclusions about the underlying population the sample came from.
 
 - .vocab[Estimation]: using the sample to estimate a plausible range of values for the unknown parameter
 
-- .vocab[Testing]: evaluating whether our observed sample provides evidence 
-for or against some claim about the population
+- .vocab[Testing]: evaluating whether our observed sample provides evidence for or against some claim about the population
 
-Today we will focus on **estimation**.
+---
 
+## Let's \*virtually\* go to Asheville! 
+
+.center[
+![](img/03/asheville.jpg)
+
+**How much should we expect to pay for an Airbnb in Asheville?**
+]
+
+---
+
+## Asheville data
+
+[Inside Airbnb](http://insideairbnb.com/) scraped all Airbnb listings in Asheville, NC, that were active on June 25, 2020.
+
+**Population of interest**: listings in the Asheville with at least ten reviews.
+
+**Parameter of interest**: Mean price per guest per night among these 
+listings.
+
+.question[
+What is the mean price per guest per night among Airbnb rentals in June 2020, 
+among Airbnbs with at least ten reviews in Asheville (zip codes 28801 - 28806)?
+]
+
+---
+
+## Visualizing our sample
+
+```{r echo = F}
+abb <- read_csv("data/asheville.csv")
+```
+
+We have data on the price per guest (`ppg`) for a random
+sample of 50 Airbnb listings.
+
+```{r, echo = F, out.width = "70%"}
+ggplot(data = abb, aes(ppg)) +
+  geom_histogram(binwidth = 25,
+                 color = "darkblue",
+                 fill = "skyblue") +
+  labs(title = "Right-skewed distribution of price per guest",
+       x = "Price per guest per night",
+       y = "Count") +
+  scale_y_continuous(breaks = seq(0, 20, by = 5)) + 
+  ylim(0, 20) +
+  theme_minimal()
+```
+
+---
+
+## Sample statistic
+
+A .vocab[sample statistic (point estimate)] is a single value of a statistic computed from the sample data to serve as the "best guess", or estimate, for the population parameter. 
+
+```{r}
+abb %>% 
+  summarize(mean_price = mean(ppg))
+```
+
+--
+
+If we took another random sample of 50 Airbnbs in Asheville, we'd likely have a different sample statistic.
 ---
 
 ## Variability of sample statistics
 
-- We've seen that each sample from the population yields a slightly different 
-sample statistic (sample mean, sample proportion, etc.)
+- Each sample from the population yields a slightly different sample statistic.
 
-- Previously we've quantified this value via simulation
+- The sample-to-sample difference is called .vocab[sampling variability].
 
-- Today we talk about some of the theory underlying .vocab[sampling distributions],
-particularly as they relate to sample means.
+- We can use theory to help us understand the underlying .vocab[sampling distribution] and quantify this sample-to-sample variability.  
 
 ---
 
-## Statistical inference
+## The goal of statistical inference
 
 - Statistical inference is the act of generalizing from a sample in order to 
 make conclusions regarding a population. 
@@ -146,23 +211,22 @@ sample statistic.
 
 ## Sampling distribution of the mean
 
-Suppose we’re interested in the mean resting heart rate of students at Duke, and 
-are able to do the following:
+We're interested in the mean price per guest per night at Aribnbs in Asheville, so suppose we were able to do the following:
 
 --
 
 1. Take a random sample of size $n$ from this population, and calculate the 
-mean resting heart rate in this sample, $\bar{X}_1$
+mean price per guest per night in this sample, $\bar{X}_1$
 
 --
 
 2. Put the sample back, take a second random sample of size $n$, and calculate 
-the mean resting heart rate from this new sample, $\bar{X}_2$
+the mean price per guest per night from this new sample, $\bar{X}_2$
 
 --
 
 3. Put the sample back, take a third random sample of size $n$, and calculate
-the mean resting heart rate from this sample, too...
+the mean price per guest per night from this sample, too...
 
 --
 
@@ -173,8 +237,8 @@ the mean resting heart rate from this sample, too...
 ## Sampling distribution of the mean
 
 After repeating this many times, we have a dataset that has the
-sample averages from the population: $\bar{X}_1$, $\bar{X}_2$, $\cdots$,
-$\bar{X}_K$ (assuming we took $K$ total samples).
+$K$ sample averages from the population: $\bar{X}_1$, $\bar{X}_2$, $\cdots$,
+$\bar{X}_K$ 
 
 --
 
@@ -182,9 +246,6 @@ $\bar{X}_K$ (assuming we took $K$ total samples).
 Can we say anything about the distribution of these sample means (that is, the
 .vocab[sampling distribution] of the mean?) 
 ]
-
-*(Keep in mind, we don't know what the underlying distribution of mean resting 
-heart rate looks like in Duke students!)*
 
 ---
 
@@ -228,8 +289,7 @@ sampling distribution of means is approximately .vocab[normally distributed].
 
 ## The normal (Gaussian) distribution
 
-The normal distribution is unimodal and symmetric and is described by its
-.vocab[density function]:
+The normal distribution is unimodal and symmetric and is described by its .vocab[density function]:
 
 If a random variable $X$ follows the normal distribution, then
 $$f(x) = \frac{1}{\sqrt{2\pi\sigma^2}}\exp\left\{ -\frac{1}{2}\frac{(x - \mu)^2}{\sigma^2} \right\}$$
@@ -253,11 +313,11 @@ ggplot(NULL, aes(c(-3,3))) +
 
 ---
 
-## Wait, *any* distribution?
+## Wait, *any* population distribution?
 
-The central limit theorem tells us that *<b>sample averages</b>* are normally distributed, if we have enough data and certain assumptions hold. 
+The Central Limit Theorem tells us that *<b>sample means</b>* are normally distributed, **if** we have enough data and certain conditions hold. 
 
-This is true *even if our original variables are not normally distributed*.
+This is true *even if the population distribution is not normally distributed*.
 
 Click [here](http://onlinestatbook.com/stat_sim/sampling_dist/index.html) to see an interactive demonstration of this idea.
 
@@ -301,21 +361,20 @@ class: middle, center
 ### Underlying population (not observed in real life!)
 
 .small[
-```{r}
+```{r echo = F}
 rs_pop <- tibble(x = rbeta(100000, 1, 5) * 100)
 ```
 ]
 
 ```{r echo=FALSE, fig.height=2}
 ggplot(data = rs_pop, aes(x = x)) +
-  geom_histogram(binwidth = 2, fill = "skyblue", color = "darkblue") +
+  geom_density(binwidth = 2, fill = "skyblue", color = "darkblue") +
   labs(title = "Population distribution", x = "") +
   theme(axis.title.y = element_blank(),
         axis.text.y  = element_blank(),
         axis.ticks.y = element_blank())
 ```
 
-**The true population parameters**
 .small[
 ```{r echo = F}
 rs_pop %>%
@@ -376,7 +435,7 @@ keep repeating...
 ## Sampling distribution
 
 .small[
-```{r}
+```{r echo = F}
 set.seed(092620)
 sampling <- rs_pop %>%
   rep_sample_n(size = 50, replace = TRUE, reps = 5000) %>%
@@ -394,7 +453,7 @@ ggplot(data = sampling, aes(x = xbar)) +
         axis.ticks.y = element_blank())
 ```
 
-```{r}
+```{r echo = F}
 sampling %>%
   summarise(mean = mean(xbar), se = sd(xbar))
 ```
@@ -407,7 +466,7 @@ How do the shapes, centers, and spreads of these distributions compare?
 
 ```{r echo=FALSE, fig.height=2.5}
 p1 <- ggplot(data = rs_pop, aes(x = x)) +
-  geom_histogram(binwidth = 2, fill = "skyblue", color = "darkblue") +
+  geom_density(binwidth = 2, fill = "skyblue", color = "darkblue") +
   labs(title = "Population distribution", x = "") +
   xlim(-5, 100) +
   theme(axis.title.y = element_blank(),
@@ -429,9 +488,9 @@ p1 / p2
 
 ---
 
-## Recap
+## CLT Recap
 
-- If certain assumptions are satisfied, regardless of the shape of the 
+- If certain conditions are satisfied, regardless of the shape of the 
 population distribution, the sampling distribution of the mean follows an 
 approximately normal distribution.
 
@@ -447,184 +506,37 @@ distribution.
 
 --
 
-.question[
-What is the standard error, and how are the standard error and sample size 
-related? What does that say about how the spread of the sampling distribution
-changes as $n$ increases?
+.alert[
+$$\bar{X} \sim N\Big(\mu, \frac{\sigma}{\sqrt{n}}\Big)$$
 ]
 
 ---
 
-class: center, middle
+## Back to Asheville 
 
-## Finding probabilities in R
+`r emo::ji("white_check_mark")` .vocab[Independence] 
 
----
-
-## Probabilities under N(0,1) curve
-
-```{r}
-# P(Z < -1.5)
-pnorm(-1.5)
-```
-
-```{r echo = F, fig.height = 2}
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(-3, -1.5), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(-1.5, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
+- The Airbnbs in this data set were randomly selected 
+- 50 is less than 10% of all Airbnbs in Asheville 
 
 --
 
-```{r echo = F, fig.height = 2}
-from.z <- qnorm(pnorm(-1))
-to.z <- qnorm(pnorm(2))
+`r emo::ji("white_check_mark")` .vocab[Sample size / distribution]
 
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(from.z, to.z), color = "black") +
-    geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(-3, from.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
+- The sample size 50 is sufficiently large, $(n > 30)$ 
 
 ---
 
-##  Probability between two values
+## Back to Asheville 
 
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
+.alert[
+Let $\bar{X}$ be the mean price per guest per night in a sample of 50 Airbnbs. Since the conditions are satisfied, we know by the CLT
+
+$$\bar{X} \sim N\Big(\mu, \frac{\sigma}{\sqrt{50}}\Big)$$
+Where $\mu$ is the population mean price per guest per night, and $\sigma$ is the population standard deviation. 
 ]
 
-
-```{r echo = F, fig.height = 2}
-from.z <- -3
-to.z <- qnorm(pnorm(2))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#C71585", xlim = c(from.z, to.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-```{r echo = F, fig.height = 2}
-from.z <- -3
-to.z <- qnorm(pnorm(-1))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#C71585", xlim = c(from.z, to.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-```{r echo = F, fig.height = 2}
-from.z <- qnorm(pnorm(-1))
-to.z <- qnorm(pnorm(2))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(from.z, to.z), color = "black") +
-    geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(-3, from.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
-```{r}
-pnorm(2) - pnorm(-1)
-```
-
----
-
-##  Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-```{r}
-pnorm(2) - pnorm(-1)
-```
-
----
-
-## Finding cutoff values under N(0,1) curve
-
-```{r}
-# find Q1
-qnorm(0.25)
-```
-
-
-```{r echo = F, fig.height = 2}
-from.z <- -3
-to.z <- qnorm(.25)
- 
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(from.z, to.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Looking ahead...
-
-We will use the Central Limit Theorem and the normal distribution to conduct statistical inference.
-
----
-## The Central Limit Theorem
-
-For a population with a well-defined mean $\mu$ and standard deviation $\sigma$,
-these three properties hold for the distribution of sample average $\bar{X}$,
-assuming certain conditions hold:
-
-`r emo::ji("white_check_mark")` The distribution of the sample statistic is nearly normal
-
-`r emo::ji("white_check_mark")` The distribution is centered at the (often unknown) population parameter
-
-`r emo::ji("white_check_mark")` The variability of the distribution is inversely proportional to the square 
-root of the sample size
+- We will use the CLT to draw conclusions about $\mu$, and we'll deal with the unknown $\sigma$.
 
 ---
 
@@ -634,7 +546,7 @@ Knowing the distribution of the sample statistic $\bar{X}$ can help us
 
 --
 
-- estimate a population parameter as point **estimate** $\boldsymbol{\pm}$ **margin of error**
+- estimate a population parameter as **sample statistic** $\boldsymbol{\pm}$ **margin of error**
   - the .vocab[margin of error] is comprised of a measure of how confident we want to be and how variable the sample statistic is
 --
 
@@ -662,154 +574,6 @@ Then the CLT tells us that $\bar{X}$ approximately has the distribution $N\left(
 That is,
 
 $$Z = \frac{\bar{X} - \mu}{\sigma/\sqrt{n}} \sim N(0, 1)$$
-
----
-
-## Probabilities under N(0,1) curve
-
-```{r}
-# P(Z < -1.5)
-pnorm(-1.5)
-```
-
-```{r echo = F, fig.height = 2}
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(-3, -1.5), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(-1.5, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
---
-
-```{r echo = F, fig.height = 2}
-from.z <- qnorm(pnorm(-1))
-to.z <- qnorm(pnorm(2))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(from.z, to.z), color = "black") +
-    geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(-3, from.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-##  Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-
-```{r echo = F, fig.height = 2}
-from.z <- -3
-to.z <- qnorm(pnorm(2))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#C71585", xlim = c(from.z, to.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-```{r echo = F, fig.height = 2}
-from.z <- -3
-to.z <- qnorm(pnorm(-1))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#C71585", xlim = c(from.z, to.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
----
-
-## Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-```{r echo = F, fig.height = 2}
-from.z <- qnorm(pnorm(-1))
-to.z <- qnorm(pnorm(2))
-
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(from.z, to.z), color = "black") +
-    geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(-3, from.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
-```{r}
-pnorm(2) - pnorm(-1)
-```
-
----
-
-##  Probability between two values
-
-.question[
-If $Z \sim N(0, 1)$, what is $P(-1 < Z < 2)$?
-]
-
-```{r}
-pnorm(2) - pnorm(-1)
-```
-
----
-
-## Finding cutoff values under N(0,1) curve
-
-```{r}
-# find the median, Q2
-qnorm(0.5)
-```
-
-
-```{r echo = F, fig.height = 2}
-from.z <- -3
-to.z <- qnorm(.5)
- 
-ggplot(NULL, aes(c(-3,3))) +
-  geom_area(stat = "function", fun = dnorm, fill = "#00998a", xlim = c(from.z, to.z), color = "black") +
-  geom_area(stat = "function", fun = dnorm, fill = "#FFFFFF", xlim = c(to.z, 3), color = "black") +
-  labs(x = "", 
-       y = "Density") +
-  theme_bw() +
-  scale_x_continuous(breaks = c(-3,-2,-1,0,1,2,3))
-```
-
 ---
 
 ## What if $\sigma$ isn't known?
@@ -824,11 +588,12 @@ knitr::include_graphics("img/03/guinness.jpg")
 
 - In practice, we never know the true value of $\sigma$, and so we estimate it from our data with $s$.
 
-We can make the following test statistic for testing
-a single sample's population mean, which has a .vocab[t-distribution with n-1 degrees of freedom]:
+- In practice We will use the $t$ distribution instead of the standard normal distribution when we conduct statistical inference for the mean (and eventually linear regression coefficients)
 
 .question[
-$$ T = \frac{\bar{X} - \mu}{s/\sqrt{n}} \sim t_{n-1}$$
+For the sample mean $\bar{X}$, 
+
+$$ Z = \frac{\bar{X} - \mu}{\boldsymbol{\sigma}/\sqrt{n}} \sim N(0, 1) \hspace{5mm} \Rightarrow \hspace{5mm}  T = \frac{\bar{X} - \mu}{\mathbf{s}/\sqrt{n}} \sim t_{n-1}$$
 ]
 
 ---
@@ -841,8 +606,7 @@ The t-distribution is also unimodal and symmetric, and is centered at 0
 --
 
 Thicker tails than the normal distribution
-  - This is to make up for additional variability introduced by using $s$ instead of $\sigma$ in calculation of the 
-SE
+  - This is to make up for additional variability introduced by using $s$ instead of $\sigma$ in calculation of the .vocab[standard error (SE)], $s/\sqrt{n}$.
 
 ---
 
@@ -865,313 +629,250 @@ ggplot(d, aes(x=x, y=d, color=dist)) + geom_line()
 
 ---
 
-## T distribution
+class: middle, center
 
-.pull-left[
-.vocab[Finding probabilities under the t curve:]
+## Hypothesis testing 
 
-```{r}
-#P(t < -1.96)
-pt(-1.96, df = 9)
-```
+---
 
-```{r}
-#P(t > -1.96)
-pt(-1.96, df = 9, 
-   lower.tail = FALSE)
-```
+
+## Mean price per guest per night 
+
+.question[
+Does the data provide sufficient evidence that the mean price per guest per night in Airbnbs in Asheville is different from $80? 
 ]
 
+---
+
+## Outline of a hypothesis test
+
 --
+
+`r emo::ji('one')` State the hypotheses.
+
+
+--
+
+`r emo::ji('two')` Calculate the test statistic. 
+
+
+--
+
+`r emo::ji('three')` Calculate the p-value.
+
+
+--
+
+`r emo::ji('four')` State the conclusion. 
+
+
+---
+
+## `r emo::ji('one')` State the hypotheses
+
+pull-left[
+.small-box[
+$$\large{\begin{aligned}& H_0: \mu = 80 \\& H_a: \mu \neq 80\end{aligned}}$$
+]
+]
 
 .pull-right[
+<font color = "white">place-holder</font>
+ 
+.big[.vocab[Null hypothesis]]
 
-.vocab[Finding cutoff values under the t curve:]
+.big[.vocab[Alternative hypothesis]]
 
-```{r}
-# Find Q1
-qt(0.25, df = 9)
-```
-
-```{r}
-# Q3
-qt(0.75, df = 9)
-```
-]
-
-
----
-
-## Resident satisfaction in Durham
-
-`durham_survey` contains resident responses to a survey given by the City of
-Durham in 2018. These are a randomly selected, representative sample of
-Durham residents.
-
-Questions were rated 1 - 5, with 1 being "highly dissatisfied" and 5 being
-"highly satisfied."
-
---
-
-.question[
-Is there evidence that, on average, Durham residents are generally satisfied (score greater than 3) with the quality of the public library system? 
 ]
 
 ---
 
-## Exploratory Data Analysis
+## `r emo::ji('two')` Calculate the test statistic.
 
-```{r fig.height=2.5, fig.width=5, message=FALSE}
-durham <- read_csv("data/durham_survey.csv") %>%
-  filter(quality_library != 9)
-```
+**From our data**
 
-```{r}
-durham %>% 
-  summarise(x_bar = mean(quality_library), 
-            med = median(quality_library), 
-            sd = sd(quality_library), n = n())
-```
-
----
-
-## Exploratory Data Analysis
-
-```{r warning = F, echo = F, fig.height = 2.5}
-durham %>% 
-  filter(quality_library!= 9) %>% 
-  ggplot(aes(x = quality_library)) + 
-    geom_histogram(binwidth = 0.95) +
-    labs(x = "Satisfaction with public library system", y = "Count",
-         title = "Most residents are generally satisifed with the public library system")
-```
-
----
-
-## Hypotheses
-
-.question[
-What are the hypotheses for evaluating if Durham residents, on average, are generally satisfied with the public library system?
-]
-
---
-
-$$H_0: \mu = 3$$ 
-$$H_a: \mu > 3$$
-
----
-
-## Conditions
-
-.question[
-What conditions must be satisfied to conduct this hypothesis test using methods 
-based on the CLT? Are these conditions satisfied?
-]
-
---
-
-**Independence?** 
-
---
-
-`r emo::ji("white_check_mark")` The residents were randomly selected for the survey, and 521 is less than 10% of the Durham population (~ 270,000).
-
---
-
-**Sample size / distribution?**
-
---
-
-`r emo::ji("white_check_mark")` 521 > 30, so the sample is large enough to apply the Central Limit Theorem. 
-
----
-
-## Calculating the test statistic
-
-Summary statistics from the sample:
-
-```{r fig.height=3, fig.width=5, echo=FALSE}
-durham_summary <- durham %>% 
-  filter(quality_library != 9) %>%
-  summarise(xbar = mean(quality_library), s = sd(quality_library), n = n())
-durham_summary
+```{r echo = F}
+abb %>% 
+  summarise(x_bar = mean(ppg), 
+            sd = sd(ppg), n = n()) %>%
+  kable(digits = 3)
 ```
 
 --
 
-And the CLT says:
-
-$$\bar{x} \sim N\left(mean = \mu, SE = \frac{\sigma}{\sqrt{n}}\right)$$
-
---
-
-.question[
-How many standard errors away from the population mean is the observed sample 
-mean?
-]
-
-.question[
-How likely are we to observe a sample mean that is at least as extreme as the 
-observed sample mean, if in fact the null hypothesis is true?
+.eq[
+$$\text{test statistic} = \frac{\text{Estimate} - \text{Hypothesized}}{\text{Standard error}}$$ 
 ]
 
 ---
 
-## Calculations
+## `r emo::ji('two')` Calculate the test statistic.
 
---
+**From our data**
 
-```{r}
-(se <- durham_summary$s / sqrt(durham_summary$n)) # SE
+```{r echo = F}
+abb %>% 
+  summarise(x_bar = mean(ppg), 
+            sd = sd(ppg), n = n()) %>%
+  kable(digits = 3)
 ```
 
---
 
-```{r}
-(t <- (durham_summary$xbar - 3) / se) # Test statistic
-```
-
---
-
-```{r}
-(df <- durham_summary$n - 1) # Degrees of freedom
-```
-
---
-
-```{r}
-pt(t, df, lower.tail = FALSE) # P-value, P(T > t |H_0 true)
-```
-
----
-
-## Conclusion
-
-The p-value is very small, so we reject $H_0$.
-
---
-
-The data provide sufficient evidence at the $\alpha = 0.05$ level that Durham residents, on average, are satisfied with the quality of the public library system.
-
---
-
-.question[
-Would you expect a 95% confidence interval to include 3?
+<br> 
+.eq[
+$$ t = \frac{\bar{X} - \mu_0}{\mathbf{s}/\sqrt{n}} = \frac{76.587 - 80}{50.141 / \sqrt{50}} = -0.481$$
 ]
 
 ---
 
-## Confidence interval for a mean
+## `r emo::ji('three')` Calculate the p-value.
 
-.alert[
-**General form of the confidence interval** 
-
-$$point~estimate \pm critical~value \times SE$$
+.eq[
+$$\text{p-value} = P(|t| \geq |\text{test statistic}|)$$
 ]
 
---
-
-.alert[
-**Confidence interval for the mean** 
-
-$$\bar{x} \pm t^*_{n-1} \times \frac{s}{\sqrt{n}}$$
-]
+Calculated from a $t$ distribution with $n-1$ degrees of freedom
 
 ---
 
-## Calculate 95% confidence interval 
+## `r emo::ji('three')` Calculate the p-value
 
-.alert[
-$$\bar{x} \pm t^*_{n-1} \times \frac{s}{\sqrt{n}}$$
+The test statistic follows a $t$ distribution with 49 degrees of freedom. 
+
+.pull-left[
+```{r echo = F, fig.height = 2.5}
+ggplot(data.frame(x = c(-4, 4)), aes(x)) +
+  stat_function(fun = dt, args =list(df =49)) +
+  stat_function(fun = dt,   args =list(df =49),
+                xlim = c(-4, -.481),
+                geom = "area", fill = "steelblue") + 
+    stat_function(fun = dt,   args =list(df = 49),
+                xlim = c(.481, 4),
+                geom = "area", fill = "steelblue") +
+    geom_vline(xintercept = .481,linetype = "dashed") +
+    geom_vline(xintercept = -.481,linetype = "dashed") +
+    labs(x = "t", 
+         y = "density") + 
+    annotate("text", x = 2.6, y = 0.3, label = "|test statistic|") +
+  annotate("text", x = -2.6, y = 0.3, label = "-|test statistic|") +
+    ylim(0, NA) +
+  theme_classic()
+```
 ]
 
---
 
-
+.pull-right[
 ```{r}
-# Critical value 
-t_star <- qt(0.975, df)
+pval <- 2 * pt(abs(-0.481), 49, 
+               lower.tail = FALSE)
+pval 
 ```
+]
+---
 
---
+## Understanding the p-value
 
-```{r}
-# Point estimate 
-point_est <- durham_summary$xbar
-```
+|  Magnitude of p-value |             Interpretation            |
+|:---------------------:|:-------------------------------------:|
+| p-value < 0.01        | strong evidence against $H_0$         |
+| 0.01 < p-value < 0.05 | moderate evidence against $H_0$       |
+| 0.05 < p-value < 0.1  | weak evidence against $H_0$           |
+| p-value > 0.1         | effectively no evidence against $H_0$ |
 
---
+<br> 
+<br>
 
-```{r}
-# Confidence interval
-round(point_est + c(-1,1) * t_star * se, 2)
-```
+*These are general guidelines. The strength of evidence depends on the context of the problem.*
 
 ---
 
-## Interpret 95% confidence interval 
+## `r emo::ji('four')` State the conclusion
 
-```{r}
-round(point_est + c(-1,1) * t_star * se, 2)
-```
+The p-value of `r round(pval, 3)` is large, so we fail to reject the null hypothesis. 
 
-.question[
-Interpret this interval in context of the data.
-]
-
---
-
-**We are 95% confident that the true mean rating for Durham residents' satisfaction with the library system is between 3.89 and 4.05.**
+.vocab[The data do not provide sufficient evidence that the mean price per guest per night for Airbnbs in Asheville is not equal to $80.]
 
 ---
 
 class: middle, center
 
-## Inference with the CLT using `infer`
+### We know the mean price per guest per night is not equal to 80, but what is a plausible estimate for the mean? 
 
 ---
 
-## CLT-based hypothesis testing in `infer`
+## Confidence interval 
 
-$$H_0: \mu = 3 \text{ vs }H_a: \mu > 3$$
---
-
-```{r}
-durham %>%
-  t_test(response = quality_library, 
-         mu = 3, 
-         alternative = "greater", 
-         conf_int = FALSE)
-```
-
----
-
-## CLT-based confidence intervals in `infer`
-
-Calculate a 95% confidence interval for the mean satisfaction rating.
---
-
-```{r}
-durham %>%
-  t_test(response = quality_library, 
-         alternative = "two-sided",
-         conf_int = TRUE, conf_level = 0.95) 
-```
-
----
-
-
-## Other built-in functionality in R
-
-- There are more built in functions for doing some of these tests in R.
-
-- However a learning goal is this course is not to go through an exhaustive list of all CLT based tests and how to implement them
-
-- Instead the goal is to understand how these methods are / are not like the simulation based methods we learned about earlier
-
---
-
-.question[
-What is similar, and what is different, between CLT based test of means vs. simulation based test?
+.eq[
+$$\text{ Estimate} \pm \text{ (critical value) } \times \text{SE}$$
 ]
+
+--
+
+.middle[
+.eq[
+
+Confidence interval for $\bar{X}$
+
+$$\bar{X} \pm t^* \times \frac{\sigma}{\sqrt{n}}$$
+]
+]
+
+<br>
+
+$t^*$ is calculated from a $t$ distribution with $n-1$ degrees of freedom
+  
+---
+
+## Calculating the 95% CI for $\bar{X}$
+
+```{r echo = F}
+abb %>% 
+  summarise(x_bar = mean(ppg), 
+            sd = sd(ppg), n = n()) %>%
+  kable(digits = 3)
+```
+
+```{r}
+t_star <- qt(0.975, 49)
+t_star
+```
+
+--
+
+.eq[
+$$76.587 \pm 2.01 \times \frac{50.141}{\sqrt{50}} \\[8pt]
+\mathbf{[62.334, 90.840]}$$
+]
+
+---
+
+## Interpretation 
+
+.eq[
+$$\mathbf{[62.334, 90.840]}$$
+]
+
+--
+
+<br>
+
+.vocab[We are 95% confident the true mean price per guest per night for Airbnbs in Asheville is between $62.33 and $90.84.]
+
+--
+
+Note that this is consistent with the conclusion from our hypothesis test.
+
+---
+
+## Recap
+
+
+- Sampling distributions and the Central Limit Theorem 
+
+- Hypothesis test to test a claim about a population parameter
+
+- Confidence interval to estimate a population parameter
+
+
+
 
