--- a/static/slides/03-inference-review.Rmd
+++ b/static/slides/03-inference-review.Rmd
@@ -48,14 +48,9 @@ ggplot2::theme_set(ggplot2::theme_bw())
 library(tidyverse)
 library(broom)
 library(knitr)
-library(DT)
 library(emo)
-library(openintro)
 library(infer)
-library(patchwork)
 ```
-
----
 
 class: middle center
 
@@ -125,7 +120,11 @@ Similar to tasting a spoonful of soup while cooking to make an inference about t
 ## Let's \*virtually\* go to Asheville! 
 
 .center[
-![](img/03/asheville.jpg)
+
+```{r echo = F, out.width = "50%"}
+include_graphics("img/03/asheville.jpg")
+```
+
 
 **How much should we expect to pay for an Airbnb in Asheville?**
 ]
@@ -142,8 +141,7 @@ Similar to tasting a spoonful of soup while cooking to make an inference about t
 listings.
 
 .question[
-What is the mean price per guest per night among Airbnb rentals in June 2020, 
-among Airbnbs with at least ten reviews in Asheville (zip codes 28801 - 28806)?
+What is the mean price per guest per night among Airbnb rentals in June 2020  with at least ten reviews in Asheville (zip codes 28801 - 28806)?
 ]
 
 ---
@@ -161,8 +159,8 @@ sample of 50 Airbnb listings.
 ggplot(data = abb, aes(ppg)) +
   geom_histogram(binwidth = 25,
                  color = "darkblue",
-                 fill = "skyblue") +
-  labs(title = "Right-skewed distribution of price per guest",
+                 fill = "steelblue") +
+  labs(title = "Distribution of price per guest per night",
        x = "Price per guest per night",
        y = "Count") +
   scale_y_continuous(breaks = seq(0, 20, by = 5)) + 
@@ -368,7 +366,7 @@ rs_pop <- tibble(x = rbeta(100000, 1, 5) * 100)
 
 ```{r echo=FALSE, fig.height=2}
 ggplot(data = rs_pop, aes(x = x)) +
-  geom_density(binwidth = 2, fill = "skyblue", color = "darkblue") +
+  geom_density(binwidth = 2, fill = "steelblue", color = "darkblue") +
   labs(title = "Population distribution", x = "") +
   theme(axis.title.y = element_blank(),
         axis.text.y  = element_blank(),
@@ -446,7 +444,7 @@ sampling <- rs_pop %>%
 
 ```{r echo=FALSE, fig.height=1.9}
 ggplot(data = sampling, aes(x = xbar)) +
-  geom_histogram(binwidth = 1, fill = "skyblue", color = "darkblue") +
+  geom_histogram(binwidth = 1, fill = "steelblue", color = "darkblue") +
   labs(title = "Sampling distribution of sample means") +
   theme(axis.title.y = element_blank(),
         axis.text.y  = element_blank(),
@@ -466,7 +464,7 @@ How do the shapes, centers, and spreads of these distributions compare?
 
 ```{r echo=FALSE, fig.height=2.5}
 p1 <- ggplot(data = rs_pop, aes(x = x)) +
-  geom_density(binwidth = 2, fill = "skyblue", color = "darkblue") +
+  geom_density(binwidth = 2, fill = "steelblue", color = "darkblue") +
   labs(title = "Population distribution", x = "") +
   xlim(-5, 100) +
   theme(axis.title.y = element_blank(),
@@ -474,7 +472,7 @@ p1 <- ggplot(data = rs_pop, aes(x = x)) +
         axis.ticks.y = element_blank())
 
 p2 <- ggplot(data = sampling, aes(x = xbar)) +
-  geom_histogram(binwidth = 1, fill = "skyblue", color = "darkblue") +
+  geom_histogram(binwidth = 1, fill = "steelblue", color = "darkblue") +
   labs(title = "Sampling distribution of sample means", x = "Sample means") +
   xlim(-5, 100) +
   labs(x = " ", 
@@ -639,7 +637,7 @@ class: middle, center
 ## Mean price per guest per night 
 
 .question[
-Does the data provide sufficient evidence that the mean price per guest per night in Airbnbs in Asheville is different from $80? 
+Does the data provide sufficient evidence that the mean price per guest per night in Airbnbs in Asheville differs from $80? 
 ]
 
 ---
@@ -670,7 +668,7 @@ Does the data provide sufficient evidence that the mean price per guest per nigh
 
 ## `r emo::ji('one')` State the hypotheses
 
-pull-left[
+.pull-left[
 .small-box[
 $$\large{\begin{aligned}& H_0: \mu = 80 \\& H_a: \mu \neq 80\end{aligned}}$$
 ]
@@ -682,8 +680,13 @@ $$\large{\begin{aligned}& H_0: \mu = 80 \\& H_a: \mu \neq 80\end{aligned}}$$
 .big[.vocab[Null hypothesis]]
 
 .big[.vocab[Alternative hypothesis]]
-
 ]
+
+<br> 
+
+--
+
+**Note**: We define the hypotheses **<u>before</u>** analyzing the data.
 
 ---
 
@@ -697,6 +700,8 @@ abb %>%
             sd = sd(ppg), n = n()) %>%
   kable(digits = 3)
 ```
+
+<br> 
 
 --
 
@@ -796,7 +801,7 @@ The p-value of `r round(pval, 3)` is large, so we fail to reject the null hypoth
 
 class: middle, center
 
-### We know the mean price per guest per night is not equal to 80, but what is a plausible estimate for the mean? 
+### What is a plausible estimate for the mean price per guest per night? 
 
 ---
 
@@ -861,6 +866,23 @@ $$\mathbf{[62.334, 90.840]}$$
 --
 
 Note that this is consistent with the conclusion from our hypothesis test.
+
+---
+
+## One-sample t-test functions in R
+
+```{r}
+library(infer)
+t_test(abb, response = ppg, mu = 80)
+```
+
+
+--
+
+```{r}
+t.test(abb$ppg, mu = 80) %>%
+  tidy()
+```
 
 ---
 
